--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 
 <body>
 
-    <div class = "main-text">
-        <p class = "main"> 
-            This text will appear bit by bit as you wait. 
-        </p>
+    <div class = "buttons">
+        <button class = "menu-button">Projects</button>
+    </div>
+
+    <div class = "splash-text">
+        
+        <span id= "splash" class = "splash">
+            I am familiar with
+        </span>
+
+        <span class="input-cursor"></span>
+
     </div>
 </body>
