--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </a>
 
             <a href="mailto:zac.i.nolan@gmail.com">
-                <button class = "menu-button contact-button">Contact Me</button>
+                <button class = "menu-button">Contact Me</button>
             </a>
 
         </div>
