--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
 
-        <title>Zac Nolan's Portfolio</title>
+        <title>Zac Nolan</title>
         <script src = "typewriter.js"></script>
         <link rel="stylesheet" href = "stylesheet.css">
         
