--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        Projects:
+        <title>Zac Nolan's Portfolio</title>
+        <link rel ="stylesheet" href= "stylesheet.css">
+        
     </head>
+
+    <body>
+        <div class = "menu-text-div">
+            <span class="splash menu-text">
+                My Portfolio
+            </span>
+        </div>
+
+        <div class = "portfolio">
+
+            <a href = "" style="text-decoration: none;">
+                <div class = "list-item">
+                    <span class = "list-text">
+                        Secure Notes
+                    </span>
+                    <span style = "color: blue" class = "language">
+                        Python
+                    </span>
+                    <br>
+                    <span class = "list-desc">
+                        An encrypted note-taking app
+                    </span>
+                </div>  
+            </a>
+
+
+        </div>
+    </body>
 </html>
