--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
         <div class = "splash-text">
             
             <span class = "splash">
-                I am familiar with 
+                I am familiar with&nbsp;
             </span>
-            <span> </span>>
             <span style="color: orange" id= "splash" class = "splash">
                 
             </span>
