added link to secure notes downlaod

--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 
         <div class = "portfolio">
 
-            <a href = "" style="text-decoration: none;">
+            <a href = "https://github.com/Lem0naise/securenotes/releases/download/v1.1/SecureNotes.zip" style="text-decoration: none;">
                 <div class = "list-item">
                     <span class = "list-text">
                         Secure Notes
