--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 
         <div class = "portfolio">
 
-            <a href = "https://github.com/Lem0naise/securenotes/releases/download/v1.1/SecureNotes.zip" style="text-decoration: none;">
+            <a class = "item" href = "https://github.com/Lem0naise/securenotes/releases/download/v1.1/SecureNotes.zip">
                 <div class = "list-item">
                     <span class = "list-text">
                         Secure Notes
@@ -28,8 +28,30 @@
                         An encrypted note-taking app
                     </span>
                 </div>  
-            </a>
 
+            
+            </a>
+            <br/>
+            <a class = "item" href = "index.html">
+                <div class = "list-item">
+                    <span class = "list-text">
+                        This website
+                    </span>
+                    <span style = "color: orange" class = "language">
+                        HTML&nbsp;
+                    </span>
+                    <span style = "color: yellow" class = "language">
+                        Javascript&nbsp;
+                    </span>
+                    <span style = "color: lightblue" class = "language">
+                        CSS
+                    </span>
+                    <br>
+                    <span class = "list-desc">
+                        I built the very website you are viewing this on.
+                    </span>
+                </div>  
+            </a>
 
         </div>
     </body>
