--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			
 			
 			<span class = "splash"  >
-				I'm familiar with&nbsp;
+				I know how to use&nbsp;
 			</span>
 			<span style="color: orange" id= "splash" class = "splash">
 				
