Added another release (youtube dowloader)

--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@
                     <span class = "list-text">
                         Secure Notes
                     </span>
-                    <span style = "color: blue" class = "language">
+                    <span style = "color: deepskyblue" class = "language">
                         Python
                     </span>
                     <br>
@@ -51,6 +51,23 @@
                         I built the very website you are viewing this on.
                     </span>
                 </div>  
+            </a>
+            <br/>
+            <a class = "item" href = "https://github.com/Lem0naise/youtubedownloader/releases/download/v1.0/YouTubeDownloader.zip">
+                <div class = "list-item">
+                    <span class = "list-text">
+                        Youtube Downloader
+                    </span>
+
+                    <span style = "color: deepskyblue" class = "language">
+                        Python
+                    </span>
+
+                    <br>
+                    <span class = "list-desc">
+                        A program that accesses the Youtube API to retrieve MP4 and MP3 files of your favourite videos.
+                    </span>
+                </div>
             </a>
 
         </div>
