Fixed scroll snap issue

--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 	
 	</head>
 	
-	<body>
+	<body>	
 	
-		<div class = "buttons">
-			<a href = "projects.html">
-				<button class = "menu-button">Projects</button><!--
-
-				
-			--></a>
+		<a class = "snap-child"></a>
+		<div class = "buttons snap-child">
+			
 			<a href="mailto:zac.i.nolan@gmail.com">
 				<button class = "menu-button">Contact Me</button><!--
 			--></a>
@@ -48,20 +45,19 @@
 	
 		</div>
 
+		<!--Seperation of main screen and portfolio screen-->
+		<div style = "height:40em"></div>
 
 		
-        
-
-
-
+		<a class = "snap-child"></a>
 		<div class = "menu-text-div">
 			<span class="splash menu-text">
-				My Portfolio
+				<a>My Portfolio</a>
 			</span>
 		</div>
 
 		<div class = "portfolio">
-
+			
 			<a class = "item" href = "https://github.com/Lem0naise/securenotes/releases/download/v1.1/SecureNotes.zip">
 				<div class = "list-item">
 					<span class = "list-text">
@@ -79,6 +75,7 @@
 			
 			</a>
 			<br/>
+		
 			<a class = "item" href = "index.html">
 				<div class = "list-item">
 					<span class = "list-text">
@@ -119,6 +116,9 @@
 
 		</div>
 
+		
+		<div style = "height:40em"></div>
+		
 	</body>
 	
 </html>
