Increased support for mobile

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		</div>
 
 		<!--Seperation of main screen and portfolio screen-->
-		<div style = "height:40em"></div>
+		<div class = "main-seperation"></div>
 
 		
 		<a class = "snap-child"></a>
