Improved mobile usability

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 		<div class = "splash-text">
 			
 			
-			<span class = "splash"  >
+			<span class = "splash no-wrap"  >
 				I know how to use&nbsp;
 			</span>
-			<span style="color: orange" id= "splash" class = "splash">
+			<span style="color: orange" id= "splash" class = "splash no-wrap">
 				
 			</span>
 
