adding google verification

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
 	<head>
-
+		<meta name="google-site-verification" content="Mjwi8fp-GIfDM41jXFYDAS7nCmwb3fSguVAirwzQ6Yk" />
 		<title>Zac Nolan</title>
 		<script src = "typewriter.js"></script>
 		<link rel="stylesheet" href = "stylesheet.css">
