still working on broken scroll snap on chrome based platforms

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	
 	<body>	
 	
-		<a class = "snap-child"></a>
+		<section class = "snap-child"></section>
 		<div class = "buttons snap-child">
 			
 			<a href="mailto:zac.i.nolan@gmail.com">
@@ -25,7 +25,7 @@
 		
 		<div class="intro-text">
 			<span class = "splash">
-				Hi, I'm Zac.<br>I'm an intermediate programmer.
+				Hi, I'm Zac.<br>I'm an aspiring programmer.
 			</span>
 		</div>
 
@@ -49,7 +49,8 @@
 		<div class = "main-seperation"></div>
 
 		
-		<a class = "snap-child"></a>
+		<section class = "snap-child"></section>
+
 		<div class = "menu-text-div">
 			<span class="splash menu-text">
 				<a>My Portfolio</a>
