Added animation for typing

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 		</div>
 
 
-		<div class = "splash-text">
+		<div id = "splashprefix" class = "splash-text">
 			
 			
 			<span class = "splash no-wrap"  >
 				I know how to use&nbsp;
 			</span>
-			<span style="color: orange" id= "splash" class = "splash no-wrap">
+			<span id= "splash" class = "splash no-wrap">
 				
 			</span>
 
