--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		
 		<div class="intro-text">
 			<span class = "splash">
-				Hi, I'm Zac.<br>I'm an aspiring programmer.
+				Hi, I'm Zac Nolan.<br>
 			</span>
 		</div>
 
