Tried adding buttons

--- a/index.html
+++ b/index.html
@@ -23,20 +23,29 @@
 	
 	<body>	
 	
-		<section class = "snap-child"></section>
 		<div class = "buttons snap-child">
 			
+			<a href = "#home">
+				<button class = "menu-button">Home</button>
+			</a>
+
+			<a href = "#portfolio">
+				<button class = "menu-button">Portfolio</button>
+			</a>
+
 			<a href="mailto:zac.i.nolan@gmail.com">
 				<button class = "menu-button">Contact Me</button><!--
 			--></a>
 			<a target = "_blank" href="https://github.com/Lem0naise">
 				<button class = "menu-button">GitHub</button>
 			</a>
+
 		</div>
 		
+		<section id="home">
 		<div class="intro-text">
 			<span class = "splash">
-				Hi, I'm Zac Nolan.<br>
+				Hi, I'm Zac.<br>
 			</span>
 		</div>
 
@@ -45,7 +54,7 @@
 			
 			
 			<span class = "splash no-wrap"  >
-				I know how to use&nbsp;
+				I'm familiar with&nbsp;
 			</span>
 			<span id= "splash" class = "splash no-wrap">
 				
@@ -56,11 +65,13 @@
 	
 		</div>
 
+		</section>
+
 		<!--Seperation of main screen and portfolio screen-->
 		<div class = "main-seperation"></div>
 
 		
-		<section class = "snap-child"></section>
+		<section id = "portfolio">
 
 		<div class = "menu-text-div">
 			<span class="splash menu-text">
@@ -128,7 +139,7 @@
 
 		</div>
 
-		
+		</section>
 		<div class = "end-seperation"></div>
 		
 	</body>
