--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 		</div>
 		
-		<section id="home">
+		<section id="home" class="separator">		</section>
 		<div class="intro-text">
 			<span class = "splash">
 				Hi, I'm Zac.<br>
@@ -65,13 +65,13 @@
 	
 		</div>
 
-		</section>
+
 
 		<!--Seperation of main screen and portfolio screen-->
 		<div class = "main-seperation"></div>
 
 		
-		<section id = "portfolio">
+		<section id = "portfolio" class="separator">
 
 		<div class = "menu-text-div">
 			<span class="splash menu-text">
@@ -139,8 +139,11 @@
 
 		</div>
 
+		
 		</section>
+
 		<div class = "end-seperation"></div>
+
 		
 	</body>
 	
