Added a better menu bar

--- a/index.html
+++ b/index.html
@@ -22,27 +22,32 @@
 	</head>
 	
 	<body>	
-	
+		
+
+			
+
 		<div class = "buttons snap-child">
 			
+
 			<a href = "#home">
-				<button class = "menu-button">Home</button>
-			</a>
+				<button class = "menu-button">Home</button><!--
+			--></a>
 
 			<a href = "#portfolio">
-				<button class = "menu-button">Portfolio</button>
-			</a>
-
+				<button class = "menu-button">Portfolio</button><!--
+			--></a>
 			<a href="mailto:zac.i.nolan@gmail.com">
 				<button class = "menu-button">Contact Me</button><!--
 			--></a>
 			<a target = "_blank" href="https://github.com/Lem0naise">
-				<button class = "menu-button">GitHub</button>
-			</a>
+				<button class = "menu-button">GitHub</button><!--
+			--></a>
 
 		</div>
-		
-		<section id="home" class="separator">		</section>
+
+
+
+		<section id="home" class="separator">	
 		<div class="intro-text">
 			<span class = "splash">
 				Hi, I'm Zac.<br>
@@ -65,13 +70,15 @@
 	
 		</div>
 
-
+		</section>
 
 		<!--Seperation of main screen and portfolio screen-->
 		<div class = "main-seperation"></div>
 
 		
 		<section id = "portfolio" class="separator">
+
+		<div style="height: 10em" class = "main-seperation"></div>
 
 		<div class = "menu-text-div">
 			<span class="splash menu-text">
@@ -98,28 +105,6 @@
 			
 			</a>
 			<br/>
-		
-			<a class = "item" href = "index.html">
-				<div class = "list-item">
-					<span class = "list-text">
-						This website
-					</span>
-					<span style = "color: orange" class = "language">
-						HTML&nbsp;
-					</span>
-					<span style = "color: yellow" class = "language">
-						Javascript&nbsp;
-					</span>
-					<span style = "color: lightblue" class = "language">
-						CSS
-					</span>
-					<br>
-					<span class = "list-desc">
-						I built the very website you are viewing this on.
-					</span>
-				</div>  
-			</a>
-			<br/>
 			<a class = "item" href = "https://github.com/Lem0naise/youtubedownloader/releases/download/v1.0/YouTubeDownloader.zip">
 				<div class = "list-item">
 					<span class = "list-text">
@@ -136,12 +121,57 @@
 					</span>
 				</div>
 			</a>
+			<br/>
+			<a class = "item" href = "index.html">
+				<div class = "list-item">
+					<span class = "list-text">
+						This website
+					</span>
+					<span style = "color: orange" class = "language">
+						HTML&nbsp;
+					</span>
+					<span style = "color: yellow" class = "language">
+						Javascript&nbsp;
+					</span>
+					<span style = "color: lightblue" class = "language">
+						CSS
+					</span>
+					<br>
+					<span class = "list-desc">
+						This website.
+					</span>
+				</div>  
+			</a>
+
+			<br/>
+			<a class = "item" href = "#jsplayground">
+				<div class = "list-item">
+					<span class = "list-text">
+						Javascript Playground
+					</span>
+
+					<span style = "color: yellow" class = "language">
+						Javascript
+					</span>
+
+					<br>
+					<span class = "list-desc">
+						A little playground comprising of lots of small javascript projects for you to try.
+					</span>
+				</div>
+			</a>
 
 		</div>
 
 		
 		</section>
 
+
+		<!--Seperation of portfolio screen and js playground screen-->
+		<div class = "main-seperation"></div>
+
+		<section id = "jsplayground"></section>
+		hi
 		<div class = "end-seperation"></div>
 
 		
