Changed the language messages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<section id="home" class="separator">	
 		<div class="intro-text">
 			<span class = "splash">
-				Hi, I'm Zac.<br>
+				I'm Zac Nolan.<br>
 			</span>
 		</div>
 
@@ -61,7 +61,7 @@
 			
 			
 			<span class = "splash no-wrap"  >
-				I'm familiar with&nbsp;
+				I've made programs in&nbsp;
 			</span>
 			<span id= "splash" class = "splash no-wrap">
 				
