Made scrolling work

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<section id="home" class="separator">	
 		<div class="intro-text">
 			<span class = "splash">
-				I'm Zac Nolan.<br>
+				I'm Zac.<br>
 			</span>
 		</div>
 
@@ -172,8 +172,22 @@
 		<!--Seperation of portfolio screen and js playground screen-->
 		<div class = "main-seperation"></div>
 
-		<section id = "jsplayground"></section>
-		hi
+		<section id = "jsplayground">
+		
+			<div class = "rps">
+
+
+
+
+
+
+			</div>
+
+
+
+
+
+		</section>
 		<div class = "end-seperation"></div>
 
 		
