--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<span class = "list-text">
 						Secure Notes
 					</span>
-					<span style = "color: deepskyblue" class = "language">
+					<span style = "color: lightblue" class = "language">
 						Python
 					</span>
 					<br>
@@ -115,7 +115,7 @@
 						Youtube Downloader
 					</span>
 
-					<span style = "color: deepskyblue" class = "language">
+					<span style = "color: lightblue" class = "language">
 						Python
 					</span>
 
@@ -137,7 +137,7 @@
 					<span style = "color: yellow" class = "language">
 						Javascript&nbsp;
 					</span>
-					<span style = "color: lightblue" class = "language">
+					<span style = "color: green" class = "language">
 						CSS
 					</span>
 					<br>
