Fixed fading finally

--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
 
 
 
-			<a onclick="portfolio()">
-				<button class = "menu-button">Portfolio</button><!--
+			<a class='menu-button' onclick="portfolio()">Portfolio<!--
 			--></a>
-			<a href="mailto:zac.i.nolan@gmail.com">
-				<button class = "menu-button">Contact Me</button><!--
+			<a href="mailto:zac.i.nolan@gmail.com" class = "menu-button">Contact Me<!--
 			--></a>
-			<a target = "_blank" href="https://github.com/Lem0naise">
-				<button class = "menu-button">GitHub</button><!--
+			<a target = "_blank" href="https://github.com/Lem0naise" class = "menu-button">GitHub<!--
 			--></a>
 
 		</div>
