Added new file reader python program to list

--- a/index.html
+++ b/index.html
@@ -90,7 +90,22 @@
 
 		<div class = "portfolio">
 			
-			
+			<a class = "item" target="_blank" href = "https://github.com/Lem0naise/FileReader">
+				<div class = "list-item">
+					<span class = "list-text">
+						File Reader
+					</span>
+
+					<span style = "color: lightblue" class = "language">
+						Python
+					</span>
+
+					<br>
+					<span class = "list-desc">
+						A simple program to test Python GUI programs by reading text files.
+					</span>
+				</div>
+			</a>
 			<br/>
 			<a class = "item" href = "https://github.com/Lem0naise/youtubedownloader/releases/download/v1.0/YouTubeDownloader.zip">
 				<div class = "list-item">
