added meta tags

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 		<script src="js/universalsmoothscroll-min.js"></script>
 		<script src="js/universalsmoothscroll-ease-functions-min.js"></script>
 
+		<meta name="description" content="Zac Nolan's Portfolio">
+		<meta name="keywords" content="Zac Nolan, Nolan, Portfolio">
+		<meta name="author" content="Zac Nolan">
 	</head>
 	
 	<body onload="init()">	
