--- a/index.html
+++ b/index.html
@@ -27,15 +27,11 @@
 		<meta name="author" content="Zac Nolan">
 	</head>
 	
-	<body onload="init()">	
+	<body>	
 		
 
-			
 
 		<div class = "buttons">
-			
-
-
 			
 			<a class='menu-button' onclick="portfolio()">Portfolio<!--
 			--></a>
@@ -43,8 +39,10 @@
 			--></a>
 			<a target = "_blank" href="https://github.com/Lem0naise" class = "menu-button">GitHub<!--
 			--></a>
-
+		
 		</div>
+
+
 
 
 
