Added white trapezium for scrolling

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		
 		<script src="js/universalsmoothscroll-min.js"></script>
 		<script src="js/universalsmoothscroll-ease-functions-min.js"></script>
+		<script src="js/canvas-script.js"></script>
 
 		<meta name="description" content="Zac Nolan's Portfolio">
 		<meta name="keywords" content="Zac Nolan, Nolan, Portfolio">
@@ -31,6 +32,7 @@
 		
 
 
+		
 		<div class = "buttons">
 			
 			<a class='menu-button' onclick="portfolio()">Portfolio<!--
@@ -41,6 +43,7 @@
 			--></a>
 		
 		</div>
+
 
 
 
@@ -95,6 +98,7 @@
 		</div>
 
 
+
 		<div class = "portfolio">
 			
 			<a class = "item" target="_blank" href = "https://github.com/Lem0naise/FileReader">
@@ -139,35 +143,8 @@
 			
 
 		</div>
-
 		
-
-
-
-		<!--Seperation of portfolio screen and js playground screen-->
-		<div id = "jsplayground_seperation" class = "main-seperation" style = "display:none"></div>
-
-		<section id = "jsplayground" style="display:none">
-		
-			<div class = "rps">
-
-				
-				<span class = "list-text">
-					Rock Paper Scissors
-				</span>
-
-
-
-			</div>
-
-
-
-
-
-		</section>
-		<div class = "end-seperation"></div>
-
-		
+		<div id="trapezium" class="trapezium"></div>
 	</body>
 	
 </html>
