--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
 		<meta name="google-site-verification" content="Mjwi8fp-GIfDM41jXFYDAS7nCmwb3fSguVAirwzQ6Yk" />
 		<title>Zac Nolan</title>
 		<script src = "typewriter.js"></script>
-		<script src = "text_animations.js"></script>
 		<link rel="stylesheet" href = "stylesheet.css">
 		
 		<script src="js/universalsmoothscroll-min.js"></script>
 		<script src="js/universalsmoothscroll-ease-functions-min.js"></script>
-		<script src="js/canvas-script.js"></script>
+
 
 		<meta name="description" content="Zac Nolan's Portfolio">
 		<meta name="keywords" content="Zac Nolan, Nolan, Portfolio">
@@ -31,7 +30,12 @@
 	<body>	
 		
 
-
+		<canvas id="canvas"></canvas>
+		<div id = "background-image">
+			<img id="wave" src="sky.jpg">
+		</div>
+		<script src="js/canvas-script.js"></script>
+		
 		
 		<div class = "buttons">
 			
@@ -143,8 +147,9 @@
 			
 
 		</div>
+
+
 		
-		<div id="trapezium" class="trapezium"></div>
 	</body>
 	
 </html>
