Added a transition and swapped welcome and portfol

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
 			<p class = "splash-pg2">
 				Welcome.
 			</p>
+			<p class = "splash-undertext splash-undertext-animation">
+				Scroll to reveal portfolio >
+			</p>
 		</div>
 
 		<div class = "menu-text-div">
