Fixed scroll text not working

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				Welcome.
 			</p>
 			<p class = "splash-undertext splash-undertext-animation">
-				Scroll to reveal portfolio >
+				Scroll to reveal portfolio 
 			</p>
 		</div>
 
