Added file encryptor

--- a/index.html
+++ b/index.html
@@ -102,23 +102,27 @@
 
 		<div class = "portfolio">
 			
-			<a class = "item" target="_blank" href = "https://github.com/Lem0naise/FileReader">
+
+			<br/>
+
+			<a class = "item" href = "https://github.com/Lem0naise/encryption/archive/refs/heads/master.zip">
 				<div class = "list-item">
 					<span class = "list-text">
-						File Reader
+						File Encryptor
 					</span>
-
 					<span style = "color: lightblue" class = "language">
-						Python
+						Python&nbsp;
 					</span>
 
 					<br>
 					<span class = "list-desc">
-						A simple program to test Python GUI programs by reading text files.
+						A Python GUI program to encrypt and decrypt files based on a custom key.
 					</span>
-				</div>
+				</div>  
 			</a>
+
 			<br/>
+
 			<a class = "item" href = "index.html">
 				<div class = "list-item">
 					<span class = "list-text">
@@ -140,6 +144,8 @@
 				</div>  
 			</a>
 
+
+			
 			<br/>
 			
 
