--- a/404.html
+++ b/404.html
@@ -2,16 +2,17 @@
 
     <head>
         <link rel="stylesheet" href = "404.css">
+        <title>Page not found</title>
     </head>
 
     <body>
 
-        <div class = "circle_border"></div>
-        <div class = "circle"></div>
-
+        <div class="door"></div>
         <div class = "circle_text">
-            404
+            <a href="index.html">404</a>
+
         </div>
+
 
     </body>
 
