Changed font & added animation

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 	
 	<body onload="page_load()">	
 		
-		<div class = "splash_name">Zac Nolan</div>
+		<div class = "splash_name">Zac</div>
+		<div class = "splash_surname">Nolan</div>
 
 		
 		<div class = "buttons">
