Improved meta tags

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		<script src="js/universalsmoothscroll-ease-functions-min.js"></script>
 		<script src="js/canvas-script.js"></script>
 
-		<meta name="description" content="Zac Nolan's Portfolio">
-		<meta name="keywords" content="Zac Nolan, Nolan, Portfolio">
-		<meta name="author" content="Zac Nolan">
+		<meta name="description" content="Zac Nolan - Portfolio containing work experience and contact details"/>
+		<meta name="keywords" content="Zac Nolan, Nolan, Portfolio"/>
+		<meta name="author" content="Zac Nolan"/>
 	</head>
 	
 	<body onload="page_load()">	
