--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 	
 	<body onload="page_load()">	
 		
+		<div class = "rectangle"></div>
+		
 		<div class = "splash_name">Zac</div>
 		<div class = "splash_surname">Nolan</div>
 		<div class="whiteline-h"></div>
@@ -58,7 +60,7 @@
 
 
 		<div class = "page-2-div">
-			<p class = "splash-pg2">
+			<p class = "left-title">
 				Welcome.
 				<p class = "splash-undertext splash-undertext-animation">
 					Scroll to reveal portfolio 
