Moved buttons and portfolio into view

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 		
 		<meta name="google-site-verification" content="Mjwi8fp-GIfDM41jXFYDAS7nCmwb3fSguVAirwzQ6Yk" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Zac Nolan</title>
 		<script src = "typewriter.js"></script>
 		<link rel="stylesheet" href = "stylesheet.css">
@@ -46,7 +47,7 @@
 		
 		</div>
 
-
+		
 		<div class = "portfolio">
 
 			<a class = "item" href = "index.html">
