Moved portfolio to left

--- a/index.html
+++ b/index.html
@@ -30,12 +30,66 @@
 	
 	<body>	
 		
-		<div class = "rectangle"></div>
 
 		<div class = "left_page">
 			<div class="splash">
 				Zac Nolan
 			</div>
+			<div class = "bio">
+				A portfolio of my coding projects
+			</div>
+
+			<div class = "portfolio">
+
+				<a class = "item" href = "index.html">
+					<div class = "list-item">
+						<span class = "list-text">
+							This website
+						</span>
+						<span style = "color: orange" class = "language">
+							HTML&nbsp;
+						</span>
+						<span style = "color: yellow" class = "language">
+							Javascript&nbsp;
+						</span>
+						<span style = "color: green" class = "language">
+							CSS
+						</span>
+						<br>
+						<span class = "list-desc">
+							This website.
+						</span>
+					</div>  
+				</a>
+				
+				<br/>
+	
+				<a class = "item" href = "https://github.com/Lem0naise/encryption/archive/refs/heads/master.zip">
+					<div class = "list-item">
+						<span class = "list-text">
+							File Encryptor
+						</span>
+						<span style = "color: lightblue" class = "language">
+							Python&nbsp;
+						</span>
+	
+						<br>
+						<span class = "list-desc">
+							A Python GUI program to encrypt and decrypt files based on a custom key.
+						</span>
+					</div>  
+				</a>
+	
+				<br/>
+				
+	
+			</div>
+
+
+		</div>
+
+		<div class = "right_page">
+
 		</div>
 
 		<div class = "buttons">
@@ -48,51 +102,7 @@
 		</div>
 
 		
-		<div class = "portfolio">
-
-			<a class = "item" href = "index.html">
-				<div class = "list-item">
-					<span class = "list-text">
-						This website
-					</span>
-					<span style = "color: orange" class = "language">
-						HTML&nbsp;
-					</span>
-					<span style = "color: yellow" class = "language">
-						Javascript&nbsp;
-					</span>
-					<span style = "color: green" class = "language">
-						CSS
-					</span>
-					<br>
-					<span class = "list-desc">
-						This website.
-					</span>
-				</div>  
-			</a>
-			
-			<br/>
-
-			<a class = "item" href = "https://github.com/Lem0naise/encryption/archive/refs/heads/master.zip">
-				<div class = "list-item">
-					<span class = "list-text">
-						File Encryptor
-					</span>
-					<span style = "color: lightblue" class = "language">
-						Python&nbsp;
-					</span>
-
-					<br>
-					<span class = "list-desc">
-						A Python GUI program to encrypt and decrypt files based on a custom key.
-					</span>
-				</div>  
-			</a>
-
-			<br/>
-			
-
-		</div>
+		
 		
 
 	</body>
