--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
 		<title>Zac Nolan</title>
 		<script src = "typewriter.js"></script>
 		<link rel="stylesheet" href = "stylesheet.css">
-		
-		<script src="js/universalsmoothscroll-min.js"></script>
-		<script src="js/universalsmoothscroll-ease-functions-min.js"></script>
-		<script src="js/canvas-script.js"></script>
+
+		<script src="js/script.js"></script>
 
 		<meta name="description" content="Zac Nolan - Portfolio containing work experience and contact details"/>
 		<meta name="keywords" content="Zac Nolan, Nolan, Portfolio"/>
@@ -56,18 +54,16 @@
 							CSS
 						</span>
 						<br>
-						<span class = "list-desc">
-							This website.
-						</span>
+
 					</div>  
 				</a>
 				
 				<br/>
 	
-				<a class = "item" href = "https://github.com/Lem0naise/encryption/archive/refs/heads/master.zip">
+				<a class = "item" href = "https://github.com/Lem0naise/wordle/archive/refs/heads/main.zip">
 					<div class = "list-item">
 						<span class = "list-text">
-							File Encryptor
+							Wordle
 						</span>
 						<span style = "color: lightblue" class = "language">
 							Python&nbsp;
@@ -75,7 +71,7 @@
 	
 						<br>
 						<span class = "list-desc">
-							A Python GUI program to encrypt and decrypt files based on a custom key.
+							Python recreation of <a class="no-format" href="https://www.nytimes.com/games/wordle/index.html">Wordle</a>
 						</span>
 					</div>  
 				</a>
@@ -88,9 +84,6 @@
 
 		</div>
 
-		<div class = "right_page">
-			<img class = "preview">
-		</div>
 
 		<div class = "buttons">
 			
@@ -100,6 +93,11 @@
 			--></a>
 		
 		</div>
+
+		<div class = "right_page">
+			<img id = "img"/>
+		</div>
+
 
 		
 		
