--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 							CSS
 						</span>
 						<br/>
+						<span class = "list-desc">
+							My portfolio website
+						</span>
 
 					</div>  
 				</a>
@@ -69,7 +72,7 @@
 	
 						<br/>
 						<span class = "list-desc">
-							Python recreation of Wordle
+							A recreation of the word game Wordle in Python, runnable in your shell
 						</span>
 					</div>  
 				</a>
