Deleted old styles

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 						</span>
 	
 						<br/>
-						<span class = "list-desc">
+						<div class = "list-desc">
 							A recreation of the word game Wordle in Python, runnable in your shell
-						</span>
+						</div>
 					</div>  
 				</a>
 	
