Fixed link handling

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 				</a>
 				
 	
-				<a class = "item" target="_blank" data-link = "https://github.com/Lem0naise/wordle" href="https://github.com/Lem0naise/wordle/archive/refs/heads/main.zip" onclick="downloadfile(this);">
+				<a class = "item" data-link = "https://github.com/Lem0naise/wordle" href="https://github.com/Lem0naise/wordle/archive/refs/heads/main.zip" onclick="downloadfile(this);">
 					<div id = "wordle" class = "list-item">
 						<span class = "list-text">
 							Wordle
@@ -79,7 +79,7 @@
 				</a>
 
 
-				<a class = "item" href = "https://github.com/Lem0naise/top-trumps/archive/refs/heads/main.zip">
+				<a class = "item" data-link = "https://github.com/Lem0naise/top-trumps" href = "https://github.com/Lem0naise/top-trumps/archive/refs/heads/main.zip" onclick="downloadfile(this);"">
 					<div id = "toptrumps" class = "list-item">
 						<span class = "list-text">
 							Top Trumps
