--- a/index.html
+++ b/index.html
@@ -30,11 +30,14 @@
 		
 		
 		<div class = "left_page">
-			<div class="splash">
-				Zac Nolan
-			</div>
-			<div class = "bio">
-				A portfolio of my coding projects
+
+			<div class = "splash_title">
+				<div class="splash">
+					Zac Nolan
+				</div>
+				<div class = "bio">
+					A portfolio of my coding projects
+				</div>
 			</div>
 
 			<div class = "portfolio" id = "portfolio">
@@ -104,11 +107,12 @@
 
 
 		<div class = "buttons">
-			
-			<a href="mailto:zac.i.nolan@gmail.com" class = "menu-button">Contact Me<!--
-			--></a>
-			<a target = "_blank" href="https://github.com/Lem0naise" class = "menu-button" onload="last_button_load()">GitHub<!--
-			--></a>
+			<div class="button_margin">
+				<a href="mailto:zac.i.nolan@gmail.com" class = "menu-button">Contact Me<!--
+				--></a>
+				<a target = "_blank" href="https://github.com/Lem0naise" class = "menu-button" onload="last_button_load()">GitHub<!--
+				--></a>
+			</div>
 		
 		</div>
 
