Replaced navbar buttons

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 
 		<div class = "buttons">
 			<div class="button_margin">
-				<a href="mailto:zac.i.nolan@gmail.com" class = "menu-button">Contact Me<!--
+				<a href="mailto:zac.i.nolan@gmail.com" class = "menu-button"><img class="button-image" src="pics/email.png"><!--
 				--></a>
-				<a target = "_blank" href="https://github.com/Lem0naise" class = "menu-button" onload="last_button_load()">GitHub<!--
+				<a target = "_blank" href="https://github.com/Lem0naise" class = "menu-button" onload="last_button_load()"><img class="button-image" src="pics/github.png"><!--
 				--></a>
 			</div>
 		
