--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
 
 
 		<div class = "buttons">
-			<div class="button_margin">
+			<img id="hamburger" class="hamburger" src="pics/more.png" onclick="hamburger()">
+
+			<div class="button_margin" id="button_margin">
 				<a href="mailto:zac.i.nolan@gmail.com" class = "menu-button"><img class="button-image" src="pics/email.png"><!--
 				--></a>
 				<a target = "_blank" href="https://github.com/Lem0naise" class = "menu-button" onload="last_button_load()"><img class="button-image" src="pics/github.png"><!--
