--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 						</span>
 	
 						<br/>
-						<div class = "list-desc">
-							A recreation of the word game Wordle in Python, runnable in your shell.
-						</div>
+						<span class = "list-desc">
+							Play wordle in your terminal.
+						</span>
 					</div>  
 				</a>
 
@@ -92,9 +92,9 @@
 						</span>
 	
 						<br/>
-						<div class = "list-desc">
-							A terminal-based Top Trumps game against a computer.
-						</div>
+						<span class = "list-desc">
+							Play top trumps in your terminal.
+						</span>
 					</div>  
 				</a>
 	
@@ -107,8 +107,7 @@
 
 
 		<div class = "buttons">
-			<img id="hamburger" class="hamburger" src="pics/more.png" onclick="hamburger()">
-
+		
 			<div class="button_margin" id="button_margin">
 				<a href="mailto:zac.i.nolan@gmail.com" class = "menu-button"><img class="button-image" src="pics/email.png"><!--
 				--></a>
@@ -119,6 +118,7 @@
 		</div>
 
 		<div class = "right_page">
+			<div id = "pic_title" class = "pic_title list-desc">Wordle</div>
 			<img src = "pics/wordle.png" id = "wordle_img"/>
 			<img src="pics/toptrumps.png" id = "toptrumps_img"/>
 		</div>	
