Added fonts, centered text, redid design

--- a/index.html
+++ b/index.html
@@ -47,15 +47,17 @@
 						<span class = "list-text">
 							This website
 						</span>
-						<span style = "color: orange" class = "language">
-							HTML&nbsp;
-						</span>
-						<span style = "color: yellow" class = "language">
-							Javascript&nbsp;
-						</span>
-						<span style = "color: green" class = "language">
-							CSS
-						</span>
+						<div class="languages">
+							<span style = "color: orange" class = "language">
+								HTML&nbsp;
+							</span>
+							<span style = "color: yellow" class = "language">
+								Javascript&nbsp;
+							</span>
+							<span style = "color: green" class = "language">
+								CSS&nbsp;
+							</span>
+						</div>
 						<br/>
 						<span class = "list-desc">
 							My portfolio website.
@@ -70,10 +72,11 @@
 						<span class = "list-text">
 							Wordle
 						</span>
-						<span style = "color: lightblue" class = "language">	
-							Python&nbsp;
-						</span>
-	
+						<div class="languages">
+							<span style = "color: lightblue" class = "language">	
+								Python&nbsp;
+							</span>
+						</div>
 						<br/>
 						<span class = "list-desc">
 							Play wordle in your terminal.
@@ -87,9 +90,12 @@
 						<span class = "list-text">
 							Top Trumps
 						</span>
-						<span style = "color: lightblue" class = "language">	
-							Python&nbsp;
-						</span>
+						<div class="languages">
+							<span style = "color: lightblue" class = "language">	
+								Python&nbsp;
+							</span>
+						</div>
+
 	
 						<br/>
 						<span class = "list-desc">
