--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<span style = "color: yellow" class = "language">
 								Javascript&nbsp;
 							</span>
-							<span style = "color: green" class = "language">
+							<span style = "color: limegreen" class = "language">
 								CSS&nbsp;
 							</span>
 						</div>
