--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					Zac Nolan
 				</div>
 				<div class = "bio">
-					A portfolio of my coding projects
+					Passionate programmer and student living in the UK
 				</div>
 			</div>
 
